Clean up table and add start of category select

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,11 @@ fieldset {
     background: var(--light-blue);
     margin: 0;
     border-block-end: none;
+    margin-block: 0;
+
+    .control-group {
+        display: inline-block;
+    }
 }
 
 .palette {
