--- a/styles/style.css
+++ b/styles/style.css
@@ -38,17 +38,21 @@
     font-smooth: never;
     -webkit-font-smoothing: none;
     accent-color: var(--blue);
+    overscroll-behavior: none;
 }
 
 html {
-    background: var(--gray);
+    background: var(--purple);
 }
 
 body {
     margin: auto;
+    padding: 16px;
+    border-inline: 8px ridge var(--gray);
     display: flex;
     flex-direction: column;
     width: min-content;
+    background: var(--gray);
 }
 
 h1 {
@@ -57,6 +61,7 @@ h1 {
     background: var(--white);
     border-block: 4px ridge var(--blue);
     padding-block: 8px;
+    margin-block-start: 0;
 }
 
 h2 {
